# more_tech_vtb_hackathon

./: .env  .gitignore  README.md  interview_pipeline.py  resume_review.py  resume_review_old.py
assets/: diagram.mermaid
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  init.sql  manage_migrations.py  pyproject.toml  pytest.ini  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  0002_add_users_table.py  0003_add_vacancies_and_interview_links.py  f76ce20a8ac9_004.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: auth.py  candidate_access.py  candidates.py  interview_links.py  interviews.py  realtime.py  resumes.py  router.py  vacancies.py
backend/app/core/: events.py  state_machine.py  states.py  transitions.py
backend/app/models/: __init__.py  candidate.py  interview.py  interview_link.py  question.py  response.py  resume.py  timeline.py  user.py  vacancy.py
backend/app/schemas/: __init__.py  auth.py  candidate.py  interview.py  interview_link.py  question.py  response.py  resume.py  vacancy.py  websocket.py
backend/app/services/: ai_analysis.py  auth.py  elevenlabs_service.py  interview_analysis_mock.py  realtime_pipeline.py  resume_processor.py  scoring.py  speech_to_text.py  text_to_speech.py
backend/static/: demo.html
backend/tests/: test_complete_workflow.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
frontend/.husky/: pre-commit
src/: resume_review.py
(+63 files in other folders)
